--- a/input/stylesheets/_main.sass
+++ b/input/stylesheets/_main.sass
@@ -7,12 +7,7 @@ main
     > li
       :display inline-block
   > section
-    :background-color rgba(255, 255, 255, 0.2)
     +padding-leader(1)
-  
-
-
-  > section
     +legacy-pie-clearfix
 
 .tooltip
@@ -27,13 +22,13 @@ main
 
   &:not(.invert)
     > span
-      +ui-tooltip(left, $border-radius: 6px, $tip-color: lighten(#4b9a5f, 7%), $tip-color-alt: #4b9a5f, $tip-width: 30px, $tip-height: 15px, $border-width: 4px)
+      +ui-tooltip(left, $border-radius: 6px, $tip-color: darken(#bcc0ae, 7%), $tip-color-alt: #bcc0ae, $tip-width: 16px, $tip-height: 8px, $border-width: 3px)
   > span
     :display block
     :color #fff
     +text-shadow(0 1px 0px #333)
-    :padding 5px
+    :padding 0 5px
     +adjust-font-size-to(14px)
   &.invert
     > span
-      +ui-tooltip(right, $border-radius: 6px, $tip-color: lighten(#4b9a5f, 7%), $tip-color-alt: #4b9a5f, $tip-width: 30px, $tip-height: 15px, $border-width: 4px)
+      +ui-tooltip(right, $border-radius: 6px, $tip-color: darken(#bcc0ae, 7%), $tip-color-alt: #bcc0ae, $tip-width: 16px, $tip-height: 8px, $border-width: 3px)
