--- a/output/stylesheets/screen.sass
+++ b/output/stylesheets/screen.sass
@@ -38,6 +38,9 @@ header > section, main > section, .player > section, .contact > section, footer,
   :margin 0 auto
   :padding 0 3em
 
+header > section, .player > section, .contact > section, footer, .introduction > section
+  :max-width 750px
+
 .introduction > section
   +padding-leader
   +padding-trailer
