--- a/input/stylesheets/_contact.sass
+++ b/input/stylesheets/_contact.sass
@@ -10,10 +10,10 @@
     +transition(all 0.3s)
 
   body.ready & form
-    +transition(all 0.7s)
+    +transition(margin-top 0.4s, margin-bottom 0.4s, padding-bottom 0.4s, padding-top 0.4s, max-height 0.4s, opacity 0.4s)
 
   body.ready & section.bar .cancel
-    +transition(opacity 0.7s)
+    +transition(opacity 0.4s)
 
   &[hidden]
     :display block
@@ -94,7 +94,7 @@
   a.button
     +adjust-font-size-to(14px)
     +border-radius(2px 5px 5px 2px)
-    &, span
+    &, > span
       &:after, &:before
         :position absolute
         :left 100%
@@ -114,7 +114,7 @@
         :border-left-color lighten(#4b9a5f, 1%)
       &:hover:before
         :border-left-color darken(#4b9a5f, 7%)
-    span
+    > span
       &:after, &:before
         :margin-left -1px
         :z-index 10
@@ -122,3 +122,38 @@
         :border-left-color darken(#4b9a5f, 5%)
       &:before
         :border-left-color darken(#4b9a5f, 10%)
+
+@media (max-width: 700px)
+  .contact
+    a.button > span > span
+      :display none
+    form
+      :padding-right 0
+      .error
+        :overflow hidden
+        :max-height 0
+        :position static
+        :width auto
+        :display block
+        +transition(opacity 0.4s, max-height 0.4s)
+      fieldset.errored
+        .error
+          :max-height 24px
+    &[hidden]
+      +margin-leader(-2.6)
+      +margin-trailer(0)
+      section.bar
+        a.button
+          :margin-left 238px
+    a.button
+      +transition(margin-left 0.25s)
+      :margin-left 100px
+    section.bar
+      :float none
+      :width auto
+      :padding-right 0.75em
+      a.cancel
+        :right auto
+        :text-align right
+        :left 0
+        :width 90px
