--- a/input/stylesheets/_footer.sass
+++ b/input/stylesheets/_footer.sass
@@ -7,3 +7,10 @@ footer
     :float right
     +adjust-font-size-to(14px)
   +padding-leader(1)
+
+
+@media screen and (max-width: 700px)
+  footer
+    p
+      :float none
+      :width auto
