--- a/input/stylesheets/_main.sass
+++ b/input/stylesheets/_main.sass
@@ -10,6 +10,12 @@ main
     +padding-leader(1)
     +legacy-pie-clearfix
 
+  h1
+    :display inline-block
+    + menu
+      :margin-left 0.8em
+      :display inline-block
+
 .tooltip
   :position absolute
   :width 240px
