--- a/output/stylesheets/screen.sass
+++ b/output/stylesheets/screen.sass
@@ -95,4 +95,6 @@ header > section, .player > section, .contact > section, footer, .introduction >
   .introduction > section
     blockquote
       :margin-right 0
+      > p
+        +adjust-font-size-to(14px)
     +padding-leader(0.75)
